--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
     <meta name="theme-color" content="#051938" />
     <meta name="description" author="Prateek Singh" content="We are experts in developing, designing, and marketing digital products. We specialize in Web Development, Mobile Development, Blockchain, DevOps, Product Design, and Digital Marketing."/>
-    <meta content="Nixet | Where Quality Matters" property="og:title">
+    <meta content="Protonlogics | Where Quality Matters" property="og:title">
     <meta content="We are experts in developing, designing, and marketing digital products. We specialize in Web Development, Mobile Development, Blockchain, DevOps, Product Design, and Digital Marketing." property="og:description">
     <meta content="" property="og:image">
     <meta content="https://nixet.io/" property="og:url">
@@ -28,7 +28,7 @@
       gtag('config', 'G-V5MHRQ3819');
     </script>
     <!--title-->
-    <title>Nixet - Where Quality Matters</title>
+    <title>Protonlogics - Where Quality Matters</title>
     <!--google fonts-->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&family=Open+Sans:wght@400;600&display=swap"
