--- a/public/index.html
+++ b/public/index.html
@@ -35,17 +35,17 @@
       rel="stylesheet"
     />
     <!--bootstrap css-->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
     <!--font-awesome css-->
-    <link rel="stylesheet" href="assets/css/fontawesome-all.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/fontawesome-all.min.css" />
     <!--custom css-->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="root"></div>
     <!--all script file-->
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
